hopefully fixed text clipping on about page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -332,7 +332,7 @@ a:hover {
 }
 
 .about-jumbotron {
-    min-height: 920px;
+    min-height: 980px;
 }
 
 .about-section {
